# lab3_algo_pack

./: README.md  pyproject.toml
src/: main.py
src/errors/: func_errors.py  sort_errors.py  struct_errors.py
src/funcs/: fact.py  fibo.py
src/sortings/: bubble.py  bucket.py  counting.py  heap.py  quick.py  radix.py
src/structures/: node.py  queue.py  stack.py
src/utils/: benchmarks.py  test_generator.py
tests/: test_funcs.py  test_sortings.py  test_struct.py
